[tool.poetry]
name = "gossip"
version = "0.1.0"
description = "A simple peer-to-peer gossip network."
authors = ["Dapper Labs <engineering@dapperlabs.com>"]

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
gossip = "gossip.cli:main"
