[tool.poetry]
name = "gossip"
version = "0.9.0"
description = "A simple peer-to-peer gossip network."
authors = ["Jethro Cao <jethrocao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
docopt = "^0.6.2"
matplotlib = "^3.5.1"
networkx = "^2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.7"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
gossip = "gossip.cli:main"
